@@ -20,6 +20,10 @@ allprojects {
   }
 
   test {
+    jvmArgs(
+        "--add-opens", "java.base/java.time=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+    )
     useJUnitPlatform()
     finalizedBy(
         koverXmlReport,
